infra/zagreb/registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  annotations:
    linkerd.io/inject: enabled
