infra/zagreb/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  annotations:
    cert-manager.io/cluster-issuer: notary-ca-issuer
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: registry-auth@kubernetescrd
spec:
  rules:
    - host: registry.rio.systems
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
  tls:
    - hosts:
      - registry.rio.systems
      secretName: notary-tls
